Fix horizontal scrolling issue on contact page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,6 +123,7 @@ nav .link-row {
     flex-wrap: nowrap;
     align-items: center;
     font-size: 200%;
+    height: 100vh;
 
 }
 
@@ -241,7 +242,7 @@ nav .link-row {
 
 .contactbox {
     width: 1500px;
-    max-width: 100vw;
+    max-width: 80vw;
     min-height: 40px;
     margin: 3.5px;
 }
